Fixed spacing for bracket

--- a/Bracket/dev/public/css/style.css
+++ b/Bracket/dev/public/css/style.css
@@ -7,13 +7,15 @@ body{
 {
   width: 120px;
   float: left;
+  position: absolute;
 }
 
 .bracketGame{
+  position: absolute;
+  left: 0px;
 	width: 110px;
 	height: 34px;
 	background-image: url('../images/bracketBG.png');
-	margin: 10px;
 	padding-top: 2px;
 	font-size: 12px;
 	color: #fff;
